syntax = "proto3";

package io.apicurio.registry.streams.diservice.proto;

option java_package = "io.apicurio.registry.streams.diservice.proto";
option java_multiple_files = true;

// AsyncBiFunctionService

service AsyncBiFunctionService {

    //    CompletionStage<RES> apply(K key, REQ req);
    rpc apply (BiFunctionReq) returns (BiFunctionRes) {
    }
}

// AsyncBiFunctionService requests

message BiFunctionReq {
    bytes key = 1;
    bytes req = 2;
    string serviceName = 3;
}

// AsyncBiFunctionService responses

message BiFunctionRes {
    bytes res = 1;
}
